--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "types": "./index.d.ts",
   "dependencies": {
     "@atomist/automation-client": "^1.6.2",
-    "@atomist/automation-client-ext-humio": "^1.0.3-master.20190319172045",
+    "@atomist/automation-client-ext-humio": "^0.2.0",
     "@atomist/automation-client-ext-logzio": "^1.0.2",
     "@atomist/sdm": "^1.6.1",
     "@atomist/sdm-core": "^1.6.1",
     "@atomist/sdm-pack-build": "^1.0.4",
     "@atomist/sdm-pack-docker": "^1.1.0",
-    "@atomist/sdm-pack-k8s": "^1.6.0",
+    "@atomist/sdm-pack-k8s": "^1.7.0",
     "@atomist/sdm-pack-node": "^1.0.3",
     "@atomist/slack-messages": "^1.1.1",
     "@kubernetes/client-node": "^0.10.2",
@@ -56,7 +56,7 @@
     "supervisor": "^0.12.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
-    "typedoc": "^0.14.2",
+    "typedoc": "^0.15.0",
     "typescript": "^3.5.3"
   },
   "directories": {
